--- a/site/config.toml
+++ b/site/config.toml
@@ -26,15 +26,18 @@ theme_color = "#41228e"
 enable = true
 form_action = "#"
 [[params.plugins.css]]
-URL = "plugins/bootstrap/bootstrap.min.css"
+URL = "https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+[[params.plugins.js]]
+URL = "plugins/jQuery/jquery.min.js"
+[[params.plugins.js]]
+URL = "https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+[[params.plugins.js]]
+URL = "https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+
 [[params.plugins.css]]
 URL = "plugins/slick/slick.css"
 [[params.plugins.css]]
 URL = "plugins/themify-icons/themify-icons.css"
-[[params.plugins.js]]
-URL = "plugins/jQuery/jquery.min.js"
-[[params.plugins.js]]
-URL = "plugins/bootstrap/bootstrap.min.js"
 [[params.plugins.js]]
 URL = "plugins/slick/slick.min.js"
 [[params.plugins.js]]
