--- a/site/.forestry/settings.yml
+++ b/site/.forestry/settings.yml
@@ -2,18 +2,18 @@
 new_page_extension: md
 auto_deploy: false
 admin_path: ''
-webhook_url: 
+webhook_url:
 sections:
 - type: document
-  path: exampleSite/data/homepage.yml
+  path: site/data/homepage.yml
   label: Homepage
 - type: heading
   label: Blog Post
 - type: document
-  path: exampleSite/content/blog/_index.md
+  path: site/content/blog/_index.md
   label: Blog Page
 - type: directory
-  path: exampleSite/content/blog
+  path: site/content/blog
   label: Blog Post
   create: documents
   match: "*"
@@ -23,35 +23,35 @@ sections:
 - type: heading
   label: Portfolio
 - type: document
-  path: exampleSite/content/portfolio/_index.md
+  path: site/content/portfolio/_index.md
   label: Portfolio Page
 - type: document
-  path: exampleSite/data/portfolio.yml
+  path: site/data/portfolio.yml
   label: Portfolio Items
 - type: heading
   label: About
 - type: document
-  path: exampleSite/content/about/_index.md
+  path: site/content/about/_index.md
   label: About Page
 - type: document
-  path: exampleSite/data/about.yml
+  path: site/data/about.yml
   label: About Data
 - type: heading
   label: Others Page
 - type: directory
-  path: exampleSite/content/contact
+  path: site/content/contact
   label: Contact
   create: none
   match: "*"
 - type: heading
   label: Configuration
 - type: directory
-  path: exampleSite
+  path: site
   label: Configuration
   create: all
   match: "*.toml"
   new_doc_ext: toml
-upload_dir: exampleSite/static/images
+upload_dir: site/static/images
 public_path: "/images"
 front_matter_path: ''
 use_front_matter_path: false
